--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -23,7 +23,7 @@
 <div class="container-fluid w-100">
   <div class="row center-scroll row-height">
     <nav class="navbar navbar-expand-lg navbar-light w-100 login-header bg-gray fixed-top">
-      <div class="navbar-brand w-50 mood-logo"><img src="{% static 'img/mood png.png' %}" alt=""></div>
+      <div class="navbar-brand w-50 mood-logo"><img src="{% static 'img/mood-png.png' %}" alt=""></div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse pb-2" id="navbarSupportedContent">
         <input type="text" class="form-control m-2 width forgot-pswd" id="email" placeholder="Email or Phone Number">
