--- a/static/css/style.css
+++ b/static/css/style.css
@@ -321,3 +321,10 @@ select {
   text-align: center;
   transition: all .4s;
 }
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
